Immortal heap and minor CodeManager modifications.